--- a/Reponsive Web/404-not-found-master/01/indev.html
+++ b/Reponsive Web/404-not-found-master/01/indev.html
@@ -17,10 +17,14 @@
             </div>
             <div class="text-right">
                 <div class="text-first">
-                    I have bad news for you
+                    <span class="badNews">
+                        I have bad news for you
+                    </span>
                 </div>
                 <div class="text-second">
-                    The page you are looking for might be removed or is temporarily unavailable
+                    <span class="text-seconds">
+                        The page you are looking for might be removed or is temporarily unavailable
+                    </span>
                 </div>
                 <button class="btn-back">Back to homepage</button>
             </div>
