--- a/Reponsive Web/Interior Consultant/interior-consultant-master/index.html
+++ b/Reponsive Web/Interior Consultant/interior-consultant-master/index.html
@@ -14,7 +14,7 @@
   <div class="content">
     <header>
       <div class="title">
-        <div class="Interior">This Interior</div>
+        <div class="interior">This Interior</div>
       </div>
       <div class="menu">
         <a href="#" class="home"><span>Home</span></a>
@@ -23,7 +23,39 @@
         <a href="#" class="contact"><span>Contact</span></a>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="info">
+        <div class="title-content">
+          Modern interior
+        </div>
+        <div class="contents">
+          <div class="contents-text">A full-Service residential & commercial interior design and staging company
+            offering
+            professional organizing & eco-services.</div>
+        </div>
+        <div class="readmore">
+          Read more -->
+        </div>
+      </div>
+
+      <div class="illustration">
+        <img src="photo1.png" alt="" class="background">
+        <div class="info-person">
+          <div class="person">
+            <div>
+              <img src="photo2.png" alt="" class="avata">
+            </div>
+            <div class="des">
+              <div class="name">Aliza Webber</div>
+              <div class="job">Interior designer</div>
+            </div>
+          </div>
+          <div class="describe">
+            Designed in 2020 by Aliza Webber
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>created by Nguyen Duc Viet - devChallenges.io</footer>
   </div>
 </body>
