--- a/Reponsive Web/Edie homepage/edie-homepage-master/index.html
+++ b/Reponsive Web/Edie homepage/edie-homepage-master/index.html
@@ -9,6 +9,9 @@
   <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
   <title>Devchallenges</title>
   <link rel="stylesheet" href="Style/main.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
@@ -32,20 +35,50 @@
       </div>
     </div>
     <img src="img/heroImage.jpg" alt="" class="banner">
+    <div class="des">
+      <div class="des-title">
+        Story, emotion and purpose
+      </div>
+      <div class="des-main">
+        We help transform your ideas into real world applications
+        that will outperform your toughest competition and
+        help you achieve your strategic goals in short period of time.
+      </div>
+      <div class="des-contact">
+        <label for="contact" class="label-contact">Want us to contact you?</label>
+        <input type="text" placeholder="Email" class="email">
+        <button>Join</button>
+      </div>
+    </div>
     <main>
-      <div class="des">
-        <div class="des-title">
-          Story, emotion and purpose 
+      <div class="demand">
+        <div class="demand-title">
+          We offer high demand services
         </div>
-        <div class="des-main">
-          We help transform your ideas into real world applications
-          that will outperform your toughest competition and
-          help you achieve your strategic goals in short period of time.
-        </div>
-        <div class="des-contact">
-          <label for="contact" class="label-contact">Want us to contact you?</label>
-          <input type="text" placeholder="Email" class="email">
-          <button>Join</button>
+        <div class="option">
+          <div class="UX">
+            <div class="logo">
+              <span class="material-symbols-outlined icon">
+                edit
+              </span>
+            </div>
+            <div class="logo-title">
+              UI/UX Design
+            </div>
+            <div class="logo-des">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis
+              turpis.
+            </div>
+            <button>
+              Get started
+            </button>
+          </div>
+          <div class="FE">
+
+          </div>
+          <div class="BE">
+
+          </div>
         </div>
       </div>
     </main>
