--- a/Reponsive Web/Edie homepage/edie-homepage-master/index.html
+++ b/Reponsive Web/Edie homepage/edie-homepage-master/index.html
@@ -21,11 +21,11 @@
         Edie
       </div>
       <div class="header-menu">
-        <a href="#">Home</a>
-        <a href="#">Service</a>
-        <a href="#">Our Works</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="#" class="a-menu">Home</a>
+        <a href="#" class="a-menu">Service</a>
+        <a href="#" class="a-menu">Our Works</a>
+        <a href="#" class="a-menu">Clients</a>
+        <a href="#" class="a-menu">Contact</a>
       </div>
     </header>
     <div class="bot-header">
@@ -47,7 +47,7 @@
       <div class="des-contact">
         <label for="contact" class="label-contact">Want us to contact you?</label>
         <input type="text" placeholder="Email" class="email">
-        <button>Join</button>
+        <button class="btn-join">Join</button>
       </div>
     </div>
     <main>
@@ -69,20 +69,159 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis
               turpis.
             </div>
-            <button>
+            <button class="btn-option">Get started</button>
+          </div>
+          <div class="UX FE">
+            <div class="logo logo-fe">
+              <span class="material-symbols-outlined icon">
+                code
+              </span>
+            </div>
+            <div class="logo-title">
+              Front End
+            </div>
+            <div class="logo-des">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis
+              turpis.
+            </div>
+            <button class="btn-option btn-fe">
               Get started
             </button>
           </div>
-          <div class="FE">
+          <div class="UX">
+            <div class="logo logo-be">
+              <span class="material-symbols-outlined icon">
+                storage
+              </span>
+            </div>
+            <div class="logo-title">
+              Back End
+            </div>
+            <div class="logo-des">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis
+              turpis.
+            </div>
+            <button class="btn-option">
+              Get started
+            </button>
+          </div>
+        </div>
+        <div class="design">
+          <div class="desgin-title">
+            Good design means good business
+          </div>
+          <div class="desgin-top">
+            <div class="desgin-banner">
+              <div class="banner-container">
+                <img src="img/smarthome.jpg" alt="" class="banner-img">
+                <div class="banner-job">
+                  Full stack application
+                </div>
+                <div class="banner-name">
+                  Smart home dashboard
+                </div>
+              </div>
+            </div>
+            <div class="desgin-banner onboard">
+              <div class="banner-container">
+                <img src="img/onboard.png" alt="" class="banner-img">
+                <div class="banner-job">
+                  Full stack application
+                </div>
+                <div class="banner-name">
+                  Smart home dashboard
+                </div>
+              </div>
+            </div>
 
           </div>
-          <div class="BE">
+          <div class="desgin-top second">
+            <div class="desgin-banner">
+              <div class="banner-container">
+                <img src="img/booking.png" alt="" class="banner-img">
+                <div class="banner-job">
+                  Full stack application
+                </div>
+                <div class="banner-name">
+                  Smart home dashboard
+                </div>
+              </div>
+            </div>
+            <div class="desgin-banner onboard">
+              <div class="banner-container">
+                <img src="img/juice-product.png" alt="" class="banner-img">
+                <div class="banner-job">
+                  Full stack application
+                </div>
+                <div class="banner-name">
+                  Smart home dashboard
+                </div>
+              </div>
+            </div>
 
+          </div>
+        </div>
+        <div class="laidback">
+          <div class="laidback-des">
+            <div class="laiback-title">
+              Meet the team
+            </div>
+            <div class="laiback-content">
+              We are chilled and a laidback team
+            </div>
+            <div class="Lorem">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </div>
+          </div>
+          <div class="person">
+            <img src="img/person3.png" alt="" class="person3">
+            <div class="img-col">
+              <img src="img/person1.png" alt="" class="person1">
+              <img src="img/person2.png" alt="" class="person2">
+            </div>
+          </div>
+        </div>
+        <div class="outstanding">
+          “Fast and outstanding resutls. 
+          Edie understands their customer’s needs. They have a young and talented team.”
+        </div>
+        <div class="carlos">
+          <img src="img/person4.png" alt="" class="person4">
+          <div class="carlos-info">
+            <div class="carlos-name">
+              Carlos Tran
+            </div>
+            <div class="carlos-job">
+              The Decorate Gatsby
+            </div>
           </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-menu">
+        <a href="#" class="a-footer">Home</a>
+        <a href="#" class="a-footer">Service</a>
+        <a href="#" class="a-footer">Our Works</a>
+        <a href="#" class="a-footer">Clients</a>
+        <a href="#" class="a-footer">Contact</a>
+      </div>
+      <div class="footer-logo">
+        <div class="footer-title">
+          Edie
+        </div>
+        <div class="network-icon">
+          <img src="img/instagram.svg" alt="" class="logo-icon">
+          <img src="img/linkedin.svg" alt="" class="logo-icon">
+          <img src="img/twitter.svg" alt="" class="logo-icon">
+        </div>
+      </div>
+      <div class="footer-input">
+          <label for="contact" class="label-contact input-title">Want us to contact you?</label>
+          <input type="text" placeholder="Email" class="email">
+          <button class="footer-btn">Join</button>
+      </div>
+    </footer>
   </div>
 
 </body>
